--- a/CSS_Style_1.css
+++ b/CSS_Style_1.css
@@ -1,5 +1,5 @@
 .UserHand {
-    width: 900px;
+    width: 400px;
     display: flex;
     margin: auto auto;
     flex: 1;
@@ -7,31 +7,88 @@
     align-items: around;
     flex-direction: row;
 }
+
 body {
     background-color: rgb(54, 54, 54);
 }
-.title{
+
+.title {
     height: auto;
     width: fit-content;
-    margin: auto auto;
-    font-size: 100px;
+    margin: 20px auto;
+    font-size: 80px;
     color: rgb(255, 255, 255);
 }
-.button{
-    
-    width: 200px;
-    height: 200px;
-    border-radius: 10%;
+
+.button {
+
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
     background-color: rgb(191, 191, 191);
     /* display: flex;
     flex-direction: column; */
+    /* padding: 30px; */
 }
 
-.button h1{
-    font-size: 500%;
-
+.emoji {
+    font-size: 40px;
+    /* width: 10px;
+    height: 10px; */
+    margin: auto;
+    text-align: center;
 }
 
-.button h3{
+.button h3 {
     font-size: 300%;
+}
+
+.showStatus {
+    width: 800px;
+    height: 300px;
+    margin: auto;
+    display: flex;
+    justify-content:space-between;
+    align-items:center;
+    flex-direction: row;
+
+}
+
+.Score {
+    color: aliceblue;
+    font-size: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+}
+
+.handShow {
+    color: aliceblue;
+    font-size: 100px;
+}
+
+.status {
+    Display: block;
+    text-align: center;
+    width: fit-content;
+    margin: 0px auto;
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+
+}
+
+.statusOut {
+    width: 700px;
+    height: 80px;
+    margin: auto;
+}
+
+.restarBtn {
+    padding: 10px 20px;
+    border-radius: 100px;
+    Display: block;
+    /* width: fit-content; */
+    /* height: auto; */
+    font-size: 20px;
+
 }
