--- a/CSS_Style_1.css
+++ b/CSS_Style_1.css
@@ -6,16 +6,22 @@
     justify-content: space-evenly;
     align-items: around;
     flex-direction: row;
+    font-family: "Cactus Classical Serif", serif;
+    font-weight: 1000;
+    font-style: normal;
 }
 
 body {
-    background-color: rgb(54, 54, 54);
+    background-color: rgb(40, 40, 40);
 }
 
 .title {
     height: auto;
     width: fit-content;
     margin: 20px auto;
+    font-family: "Cactus Classical Serif", serif;
+    font-weight: 1000;
+    font-style: normal;
     font-size: 80px;
     color: rgb(255, 255, 255);
 }
@@ -25,11 +31,20 @@ body {
     width: 100px;
     height: 100px;
     border-radius: 100%;
-    background-color: rgb(191, 191, 191);
+    background-color: rgb(109, 109, 109);
+    outline: none;
+    /* 移除預設的 outline */
+    border: 2px solid rgb(255, 218, 155);
+    /* 提供自訂的焦點邊框 */
     /* display: flex;
     flex-direction: column; */
     /* padding: 30px; */
 }
+.button:active {
+    background-color:  rgb(88, 84, 80);/* 按下時變暗 */
+    border-style: inset;
+    padding: 10px 16px;
+  }
 
 .emoji {
     font-size: 40px;
@@ -48,8 +63,8 @@ body {
     height: 300px;
     margin: auto;
     display: flex;
-    justify-content:space-between;
-    align-items:center;
+    justify-content: space-between;
+    align-items: center;
     flex-direction: row;
 
 }
@@ -60,6 +75,9 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     writing-mode: vertical-lr;
     text-orientation: upright;
+    font-family: "Cactus Classical Serif", serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
 .handShow {
@@ -73,7 +91,10 @@ body {
     width: fit-content;
     margin: 0px auto;
     font-size: 30px;
-    color: rgb(255, 255, 255);
+    color: rgb(179, 179, 179);
+    font-family: "Cactus Classical Serif", serif;
+    font-weight: 400;
+    font-style: normal;
 
 }
 
